-> Capped caMic files at 5 -> Fixed casing on file list tabs

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -442,6 +442,14 @@
     input
         margin-left: 5px
 
+    .nav-tabs
+      li,li.active
+        a
+          text-transform: none
+
+    .token-label
+      max-width: none !important
+
 .parsets-tooltip
     background-color: rgba($tooltip-color, 0.8)
     border-radius: 3px
