-> Path name bugfix -> Fixed initial slide image not loading a frame source

--- a/templates/GenespotRE/camic.html
+++ b/templates/GenespotRE/camic.html
@@ -67,7 +67,7 @@
                             </div>
                             <div class="panel-body">
                                 <div class="iframe-container">
-                                    <iframe id="camic-iframe" width="100%" src="http://{{ camic_ip }}:{{ camic_port }}/camicroscope/osdCamicroscope.php?slideBarcode={{ barcode.0 }}"></iframe>
+                                    <iframe id="camic-iframe" width="100%" src="http://{{ camic_ip }}:{{ camic_port }}/camicroscope/osdCamicroscope.php?slideBarcode={{ barcodes.0 }}"></iframe>
                                 </div>
                             </div>
                         </div>
