-> Improved display of the caMicroscope logo and name, added link to caM homepage

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -443,12 +443,12 @@
         margin-left: 5px
 
     .nav-tabs
-      li,li.active
-        a
-          text-transform: none
+        li,li.active
+            a
+                text-transform: none
 
     .token-label
-      max-width: none !important
+        max-width: none !important
 
 .parsets-tooltip
     background-color: rgba($tooltip-color, 0.8)
@@ -529,3 +529,11 @@ span.code
     iframe
         min-height: 900px
         margin-top: 10px
+
+    .logo
+        margin-right: 10px
+
+    .camic-header-container
+        background-color: #2e66bc
+        a
+            color: white
