--- a/templates/GenespotRE/camic.html
+++ b/templates/GenespotRE/camic.html
@@ -31,13 +31,13 @@
 {% block page_name %}camic{% endblock %}
 
 {% block page_header %}
-    <div class="container">
-        <h1 class="page-header pull-left"><a href="" target="_blank">caMicroscope</a></h1>
-        <div class="pull-right">
-            <a href="" target="_blank">
+    <div class="container camic-header-container">
+        <div class="pull-left logo">
+            <a href="http://imaging.cci.emory.edu/wiki/display/CAMIC/Home" target="_blank">
                 <img class="header-camic-logo" alt="caMicroscope Logo" src="{% static 'img/camic_logo.png' %}" />
             </a>
         </div>
+        <h1 class="page-header pull-left"><a href="http://imaging.cci.emory.edu/wiki/display/CAMIC/Home" target="_blank">caMicroscope</a></h1>
     </div>
 {% endblock %}
 
