--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -537,3 +537,17 @@ span.code
         background-color: #2e66bc
         a
             color: white
+
+    .load-spinner
+        position: absolute
+        width: 100%
+        height: 900px
+        margin-top: 25px
+        background: rgb(130, 158, 188)
+        z-index: 10
+        i
+            position: absolute
+            left: 45%
+            top: 40%
+            margin: auto
+            font-size: 100px
