--- a/templates/GenespotRE/camic.html
+++ b/templates/GenespotRE/camic.html
@@ -67,6 +67,7 @@
                             </div>
                             <div class="panel-body">
                                 <div class="iframe-container">
+                                    <div class="load-spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
                                     <iframe id="camic-iframe" width="100%" src="https://{{ camic_viewer }}/camicroscope/osdCamicroscope.php?slideBarcode={{ barcodes.0 }}"></iframe>
                                 </div>
                             </div>
