-> Change caMicroscope 'single file' view to be most of the screen

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -522,7 +522,7 @@ span.code
     font-family: monospace
     font-weight: 600
 
-#camic
+#camic, #camic-single
     .camic-tabs
         li:not(:last-child)
             margin-bottom: 10px
@@ -551,3 +551,7 @@ span.code
             top: 40%
             margin: auto
             font-size: 100px
+
+#camic-single
+    .container
+        width: 90% !important
