-> Clean up caMicroscope single display to be larger.

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -554,4 +554,8 @@ span.code
 
 #camic-single
     .container
-        width: 90% !important
+        width: 90%
+    >.container
+        padding: 0px
+    >.container>.row
+        margin: 0px 15px 0px 15px
