--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -1,4 +1,4 @@
-#cohort-details
+#cohort-details, #cohort-filelist
 
     #placeholder
         .panel-body
@@ -109,7 +109,7 @@
             font-size: 12.7px
             &.program-tab
                 width: (100% / 4)
-            &.filter-tab
+            &.filter-tab, &.file-browser-tab
                 width: (100% / 3)
             &:first-child a
                 border-top-left-radius: 3px
@@ -381,9 +381,8 @@
 
 
 #cohort-filelist
-    padding-top: 15px
-    margin-top: 115px
-
+    .page-action-group
+        margin-top: 0px
     .menu-bar h3
         margin-top: 0px
 
