--- a/blink_sass/pages/_page.sass
+++ b/blink_sass/pages/_page.sass
@@ -25,7 +25,7 @@
   background-color: $white
 
   li
-    margin: 0 10px 0 0
+    margin: 0 10px 10px 0
     list-style: none
     display: inline-block
     vertical-align: middle
