-> #1931: lazy load for IGV and caMic tabs, page layout, page-retrieval

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -381,6 +381,11 @@
 
 
 #cohort-filelist
+    #placeholder
+        .panel-body
+            height: 500px
+            position: relative
+            overflow: hidden
     .page-action-group
         margin-top: 0px
     .menu-bar h3
@@ -391,6 +396,10 @@
 
     .hidden_form_value
         display: none
+
+    .filelist-panel
+        h4
+            display: inline
 
     .file-list
         .alert-dismissable
