--- a/templates/cohorts/cohort_filelist.html
+++ b/templates/cohorts/cohort_filelist.html
@@ -4,7 +4,7 @@
 
 {% comment %}
 
-   Copyright 2015, Institute for Systems Biology
+   Copyright 2017, Institute for Systems Biology
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -33,22 +33,10 @@
             <li><a href="{% url 'cohort_details' cohort.id %}">{{ cohort.name }}</a></li>
         </ol>
         <h3 class="page-header">File Browser: <a href="{% url 'cohort_details' cohort.id %}">{{ cohort.name }}</a></h3>
-        <div class="page-action-group">
-            <ul>
-                <li class="menu-item">
-                    <div class="filelist-obtain">
-                        <h5>Download</h5>
-                        <a id="download-link" href="{{ download_url }}" title="Download file manifest as CSV"><button class="btn btn-info">CSV</button></a> <a id="download-link" href="{{ download_url }}" title="Download file manifest as JSON"><button class="btn btn-info">JSON</button></a>
-                    </div>
-                </li>
-                <li class="menu-item"></li>
-                <li class="menu-item">
-                    <div class="filelist-obtain">
-                        <h5>Export</h5>
-                        <a id="download-link" href="" title="Export file manifest to BQ"><button class="btn btn-info">BQ</button></a> <a id="download-link" href="" title="Export file manifest to GCS"><button class="btn btn-info">GCS</button></a>
-                    </div>
-                </li>
-            </ul>
+        <div id="file-list-warning" class="alert alert-warning alert-dismissable" style="display: none;">
+            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            The maximum number of files which can be downloaded in a list is <span class="file-list-limit">#</span>. Your selections currently total
+            <span class="file-list-total">#</span>. Please filter your list using the platform panel at the left (or make a smaller cohort) to limit the size of your file download list.
         </div>
     </div>
 {% endblock %}
@@ -59,9 +47,23 @@
             <div class="panel panel-default">
                 <ul class="nav nav-tabs nav-tabs-files" role="tablist">
                     <li role="presentation" class="file-browser-tab active"><a href="#all-files" role="tab" data-toggle="tab" title="Browse All Files" data-file-type="all">All Files</a></li>
-                    <li role="presentation" class="file-browser-tab"><a href="#camic-files" role="tab" data-toggle="tab" title="Browse caMicroscope Files" data-file-type="camic">caMicroscope</a></li>
                     <li role="presentation" class="file-browser-tab"><a href="#igv-files" role="tab" data-toggle="tab" title="Browse IGV Files" data-file-type="igv">IGV</a></li>
+                    <li role="presentation" class="file-browser-tab"><a href="#camic-files" role="tab" data-toggle="tab" title="Browse caMicroscope Files" data-file-type="camic">caMicroscope</a></li>
                 </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="tab-content data-tab-content">
+            <div id="placeholder" class="tab-pane active file-browser-tab" role="tabpanel">
+                <div class="col-md-12 data-tab-content-panel spinner-panel">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            <div class="spinner"><i class="fa fa-spinner fa-spin"></i></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -72,7 +74,11 @@
     var page = 1;
     var total_files = {{ total_files }};
     var download_url = '{{ download_url }}';
-    var ajax_update_url = '{% url 'cohort_filelist_ajax' cohort.id %}';
+    var ajax_update_url = {
+        'all': '{% url 'cohort_filelist_ajax_panel' cohort.id 'all' %}',
+        'igv': '{% url 'cohort_filelist_ajax_panel' cohort.id 'igv' %}',
+        'camic':'{% url 'cohort_filelist_ajax_panel' cohort.id 'camic' %}'
+    };
     var SEL_IGV_FILE_MAX = '{{  sel_file_max }}';
     var FILE_LIST_MAX = '{{  file_list_max }}';
     </script>
