--- a/templates/cohorts/cohort_filelist_camic.html
+++ b/templates/cohorts/cohort_filelist_camic.html
@@ -1,210 +1,55 @@
-{% extends 'base.html' %}
-{% load staticfiles %}
-{% load custom_tags %}
-
-{% comment %}
-
-   Copyright 2015, Institute for Systems Biology
-
-   Licensed under the Apache License, Version 2.0 (the "License");
-   you may not use this file except in compliance with the License.
-   You may obtain a copy of the License at
-
-       http://www.apache.org/licenses/LICENSE-2.0
-
-   Unless required by applicable law or agreed to in writing, software
-   distributed under the License is distributed on an "AS IS" BASIS,
-   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-   See the License for the specific language governing permissions and
-   limitations under the License.
-
-{% endcomment %}
-
-{% block header %}
-{% endblock %}
-
-{% block page_name %}cohort-filelist{% endblock %}
-
-{% block secondary_nav %}
-    <div class="container">
-        <div class="row">
-            <div class="menu-bar">
-                <div class="cohort-title col-md-8">
-                    <h3><a href="{% url 'cohort_details' cohort.id %}" aria-label="Back to Cohort"><i class="fa fa-chevron-left"></i> {{ cohort.name }}</a></h3>
-                </div>
+<div id="camic-files" class="tab-pane data-tab" data-file-type="camic" role="tabpanel">
+    <div id="camic-file-panel" class="col-sm-12 col-md-12 col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <input type="submit" form ="view-camic" value="Launch caMicroscope" class="btn btn-primary pull-right nocap" style="display: none;"/>
+                <h4>Selected Image Files</h4>
             </div>
-        </div>
-    </div>
-{% endblock %}
-
-{% block content %}
-    <div class="row">
-        <div id="filter-panel" class="col-lg-3 col-md-3 col-sm-3">
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <label for="build">Build</label>
-                    <select aria-label="Build" id="build" class="form-control build">
-                        <option value="HG38" {% if build == 'HG38' %}selected{% endif %}>HG38</option>
-                        <option value="HG19" {% if build == 'HG19' %}selected{% endif %}>HG19</option>
-                    </select>
-                </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading" id="heading-platforms">Platforms</div>
-                <div class="panel-body" id="platforms-panel">
-                    <ul class="search-checkbox-list platform-counts" id="platform-{{ build }}">
-                        {% for platform in platform_counts %}
-                            <li>
-                                <input data-platform-count="{{ platform.count }}" type="checkbox" name="platform-selected" id="{{ platform.platform }}" >
-                                <label for="{{ platform.platform }}">{{ platform.platform|get_readable_name }}</label>
-                                <span class="count">({{ platform.count }})</span>
-                            </li>
-                        {% empty %}
-                            <i>No platforms available to list.</i>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-9 col-md-9 col-lg-9">
-            <div class="row cgc-user-data-type-tabs">
-                <div class="panel panel-default">
-                    <ul class="nav nav-tabs nav-tabs-data" role="tablist">
-                        <li role="presentation" class="active"><a href="#igv-viewer" role="tab" data-toggle="tab" title="View Selected Files in IGV">IGV (<span class="selected-count-igv">0</span>)</a></li>
-                        <li role="presentation"><a href="#camic-viewer" role="tab" data-toggle="tab" title="View Selected Files in caMicroscope">caMicroscope (<span class="selected-count-camic">0</span>)</a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="tab-content data-tab-content">
-                    <div id="camic-viewer" class="tab-pane inactive data-tab" role="tabpanel">
-                        <div class="data-tab-content-panel">
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <input type="submit" form ="view-camic" value="Launch caMicroscope" class="btn btn-primary pull-right nocap" style="display: none;"/>
-                                    <h4>Selected Image Files</h4>
-                                </div>
-                                <div class="panel-body file-list">
-                                    <div id="file-max-alert-cam" class="alert alert-warning alert-dismissable">
-                                        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                        The maximum number of images which can be queued for caMicroscope simultaneously is <span class="file-limit-camic">#</span>.
-                                    </div>
-                                    <p><span class="selected-count-camic">0</span> file(s) selected (<span id="selected-file-limit-camic">limit <span class="file-limit-camic file-limit">#</span></span>)</p>
-                                    <div id="tokenfield-holder-cam">
-                                        <!-- "caM selected file tokenizer" -->
-                                        <textarea name="selected-files-cam" class="form-control tokenfield" id="selected-files-cam" placeholder="Select files"></textarea>
-                                    </div>
-                                    <form id="view-camic" method="POST" action="{% url 'camic' %}" target="_blank">
-                                        <input type="text" class="hidden_form_value" id="checked_list_input_camic" name="checked_list" data-type="checked_list">
-                                        {% csrf_token %}
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="igv-viewer" class="tab-pane active data-tab" role="tabpanel">
-                        <div class="data-tab-content-panel">
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <input type="submit" form ="view-igv" value="Launch IGV" class="btn btn-primary pull-right" style="display: none;"/>
-                                    <h4>Selected BAM Files</h4>
-                                    <p><i>Note: Files viewed in IGV must all be for the same build.</i></p>
-                                </div>
-                                <div class="panel-body file-list">
-                                    <div id="file-max-alert-igv" class="alert alert-warning alert-dismissable">
-                                        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                        The maximum number of files which can be viewed in IGV simultaneously is <span class="file-limit-igv">#</span>.
-                                    </div>
-                                    <p><span class="selected-count-igv">0</span> file(s) selected (<span id="selected-file-limit-igv">limit <span class="file-limit-igv file-limit">#</span></span>)</p>
-                                    <div id="tokenfield-holder-igv">
-                                        <!-- "IGV selected files tokenizer" -->
-                                        <textarea name="selected-files-igv" class="form-control tokenfield" id="selected-files-igv" placeholder="Select files"></textarea>
-                                        <form id="view-igv" method="POST" action="{% url 'igv' %}" target="_blank">
-                                            <input type="text" class="hidden_form_value" id="checked_list_input" name="checked_list" data-type="checked_list">
-                                            <input type="text" class="hidden_form_value" id="igv-build" name="build">
-                                            {% csrf_token %}
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="filelist-panel panel">
-                <div id="file-list-warning" class="alert alert-warning alert-dismissable" style="display: none;">
+            <div class="panel-body file-list">
+                <div id="file-max-alert-cam" class="alert alert-warning alert-dismissable">
                     <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    The maximum number of files which can be downloaded in a list is <span class="file-list-limit">#</span>. Your selections currently total
-                    <span class="file-list-total">#</span>. Please filter your list using the platform panel at the left (or make a smaller cohort) to limit the size of your file download list.
+                    The maximum number of images which can be queued for caMicroscope simultaneously is <span class="file-limit-camic">#</span>.
                 </div>
-                <div class="panel-heading">
-                    <a id="download-link" href="{{ download_url }}" title="Download Files as CSV" class="pull-right"><i class="fa fa-download"></i> Download File List as CSV</a>
-                    <h4>File Listing</h4>
+                <p><span class="selected-count-camic">0</span> file(s) selected (<span id="selected-file-limit-camic">limit <span class="file-limit-camic file-limit">#</span></span>)</p>
+                <div id="tokenfield-holder-cam">
+                    <!-- "caM selected file tokenizer" -->
+                    <textarea name="selected-files-cam" class="form-control tokenfield" id="selected-files-cam" placeholder="Select files"></textarea>
                 </div>
-                <div class="panel-body">
-                    <p class="file-page-count">Showing 20 files. Page: <span class="page-num">1</span> of <span class="file-count">unknown</span> pages.</p>
-                    <p class="no-file-page-count" style="display: none;">Showing 0 files.</p>
-                    <div>
-                        <a role="button" id="prev-page" class="btn btn-primary disabled">Previous Page</a>
-                        <a role="button" id="next-page" class="btn btn-primary">Next Page</a>
-                        <span class="spinner"><i class="fa fa-spin fa-spinner hidden"></i></span>
-                    </div>
-
-                    <table class="table table-striped file-list-table" aria-label="File Listing Table">
-                        <thead>
-                        <tr>
-                            <th class="col-program">Program</th>
-                            <th class="col-barcode">Sample Barcode</th>
-                            <th class="col-exp-strategy">Exp. Strategy</th>
-                            <th class="col-platform">Platform</th>
-                            <th class="col-datacat">Data Category</th>
-                            <th class="col-datatype">Data Type</th>
-                            <th class="col-viewer">Viewer</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            </div>
-        </div>
-    </div>
-    <!-- Create Cohort Modal -->
-    <div class="modal fade" id="create-cohort-modal" tabindex="-1" role="dialog" aria-labelledby="createCohortModal" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="createCohortModal">Create Cohort</h4>
-                </div>
-                <form id="create-cohort-form" method="POST" action="{% url 'save_cohort' %}">
-                    <div class="modal-body">
-                        <label for="cohort-name">Name:</label>
-                        <input class="form-control" type="text" id="cohort-name" name="name" value="{{ cohort.name }}"/>
-                    </div>
-                    <div class="modal-footer">
-                        {% csrf_token %}
-                        <input type="submit" value="Create Cohort" class="btn btn-primary" />
-                    </div>
+                <form id="view-camic" method="POST" action="{% url 'camic' %}" target="_blank">
+                    <input type="text" class="hidden_form_value" id="checked_list_input_camic" name="checked_list" data-type="checked_list">
+                    {% csrf_token %}
                 </form>
             </div>
         </div>
+        <div class="filelist-panel panel">
+            <div class="panel-heading">
+                <h4>File Listing</h4>
+            </div>
+            <div class="panel-body">
+                <p class="file-page-count">Showing 20 files. Page: <span class="page-num">1</span> of <span class="file-count">unknown</span> pages.</p>
+                <p class="no-file-page-count" style="display: none;">Showing 0 files.</p>
+                <div>
+                    <a role="button" class="btn btn-primary prev-page disabled">Previous Page</a>
+                    <a role="button" class="btn btn-primary next-page">Next Page</a>
+                    <span class="spinner"><i class="fa fa-spin fa-spinner hidden"></i></span>
+                </div>
+
+                <table class="table table-striped file-list-table" aria-label="File Listing Table">
+                    <thead>
+                    <tr>
+                        <th class="col-program">Program</th>
+                        <th class="col-barcode">Sample Barcode</th>
+                        <th class="col-thumbnail">Thumbnail</th>
+                        <th class="col-datatype">Data Type</th>
+                        <th class="col-dataformat">Data Format</th>
+                        <th class="col-viewer">View</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
+</div>
 
-    <script type="text/javascript">
-    var cohort_id = {{ cohort.id }};
-    var page = 1;
-    var total_files = {{ total_files }};
-    var download_url = '{{ download_url }}';
-    var ajax_update_url = '{% url 'cohort_filelist_ajax' cohort.id %}';
-    var SEL_IGV_FILE_MAX = '{{  sel_file_max }}';
-    var FILE_LIST_MAX = '{{  file_list_max }}';
-    </script>
-{% endblock %}
-
-{% block js_file %}{% static 'js/cohort_filelist.js' %}{% endblock %}
