--- a/templates/cohorts/cohort_filelist.html
+++ b/templates/cohorts/cohort_filelist.html
@@ -81,6 +81,7 @@
     };
     var SEL_IGV_FILE_MAX = '{{  sel_file_max }}';
     var FILE_LIST_MAX = '{{  file_list_max }}';
+    var IMG_THUMBS_URL = '{{ img_thumbs_url }}'
     </script>
 {% endblock %}
 
