-> Added thumbnails to caMic viewer page

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -532,8 +532,13 @@ span.code
 
 #camic, #camic-single
     .camic-tabs
+        li a
+            font-size: 13px
+            font-weight: 700
         li:not(:last-child)
             margin-bottom: 10px
+        img
+            margin-top: 5px
     iframe
         min-height: 900px
         margin-top: 10px
