--- a/templates/cohorts/cohort_filelist_all.html
+++ b/templates/cohorts/cohort_filelist_all.html
@@ -63,6 +63,7 @@
                         <tr>
                             <th class="col-program">Program</th>
                             <th class="col-barcode">Sample Barcode</th>
+                            <th class="col-diseasecode">Disease Code</th>
                             <th class="col-exp-strategy">Exp. Strategy</th>
                             <th class="col-platform">Platform</th>
                             <th class="col-datacat">Data Category</th>
