--- a/templates/cohorts/cohort_filelist_camic.html
+++ b/templates/cohorts/cohort_filelist_camic.html
@@ -2,7 +2,7 @@
     <div id="camic-file-panel" class="col-sm-12 col-md-12 col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <input type="submit" form ="view-camic" value="Launch caMicroscope" class="btn btn-primary pull-right nocap" style="display: none;"/>
+                <input type="submit" form ="view-camic" value="Launch caMicroscope" class="btn btn-primary pull-right nocap cam" />
                 <h4>Selected Image Files</h4>
             </div>
             <div class="panel-body file-list">
@@ -39,6 +39,7 @@
                     <tr>
                         <th class="col-program">Program</th>
                         <th class="col-barcode">Sample Barcode</th>
+                        <th class="col-diseasecode">Disease Code</th>
                         <th class="col-thumbnail">Thumbnail</th>
                         <th class="col-datatype">Data Type</th>
                         <th class="col-dataformat">Data Format</th>
