--- a/templates/cohorts/cohort_filelist_igv.html
+++ b/templates/cohorts/cohort_filelist_igv.html
@@ -29,7 +29,7 @@
     <div id="igv-file-panel" class="col-lg-9 col-md-9 col-sm-9" role="tabpanel">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <input type="submit" form ="view-igv" value="Launch IGV" class="btn btn-primary pull-right" style="display: none;"/>
+                <input type="submit" form ="view-igv" value="Launch IGV" class="btn btn-primary pull-right igv" />
                 <h4>Selected BAM Files</h4>
                 <p><i>Note: Files viewed in IGV must all be for the same build.</i></p>
             </div>
@@ -68,6 +68,7 @@
                         <tr>
                             <th class="col-program">Program</th>
                             <th class="col-barcode">Sample Barcode</th>
+                            <th class="col-diseasecode">Disease Code</th>
                             <th class="col-exp-strategy">Exp. Strategy</th>
                             <th class="col-platform">Platform</th>
                             <th class="col-datacat">Data Category</th>
