--- a/templates/GenespotRE/camic.html
+++ b/templates/GenespotRE/camic.html
@@ -42,18 +42,18 @@
 {% endblock %}
 
 {% block content %}
-    <div class="col-lg-3">
+    <div class="col-lg-2 col-md-2 col-sm-2">
         <div class="row cgc-user-data-type-tabs">
             <div class="panel panel-default">
                 <ul class="nav nav-tabs nav-tabs-data camic-tabs" role="tablist">
-                    {% for barcode in barcodes %}
-                    <li role="presentation" class="{% if forloop.first %}active{% endif %}"><a class="barcode-link" role="tab" data-toggle="tab" data-value="{{ barcode }}" title="{{ barcode }} Tissue Slide Image">{{ barcode }}</a></li>
+                    {% for image in barcodes %}
+                    <li role="presentation" class="{% if forloop.first %}active{% endif %}"><a class="barcode-link" role="tab" data-toggle="tab" data-value="{{ image.barcode }}" title="{{ image.barcode }} {{ image.type }}">{{ image.barcode }}<br /><img src="{{ img_thumb_url }}{{ image.thumb }}/thmb_128x64.jpeg" alt="{{ image.barcode }} Thumbnail" /></a></li>
                     {% endfor %}
                 </ul>
             </div>
         </div>
     </div>
-    <div class="col-lg-9">
+    <div class="col-lg-10 col-md-10 col-sm-10">
         <div id="camic-div" class="row">
             <div class="row">
                 <div id="camic-viewer">
@@ -61,14 +61,14 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <input type="submit" form ="view-camic" value="Open in new tab" class="btn btn-primary pull-right nocap" />
-                                <form id="view-camic" method="POST" action="{% url 'camic_barcode' barcodes.0 %}" target="_blank">
+                                <form id="view-camic" method="POST" action="{% url 'camic_barcode' barcodes.0.barcode %}" target="_blank">
                                     {% csrf_token %}
                                 </form>
                             </div>
                             <div class="panel-body">
                                 <div class="iframe-container">
                                     <div class="load-spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
-                                    <iframe id="camic-iframe" width="100%" src="https://{{ camic_viewer }}/camicroscope/osdCamicroscope.php?slideBarcode={{ barcodes.0 }}"></iframe>
+                                    <iframe id="camic-iframe" width="100%" src="https://{{ camic_viewer }}/camicroscope/osdCamicroscope.php?slideBarcode={{ barcodes.0.barcode }}"></iframe>
                                 </div>
                             </div>
                         </div>
