-> Improve column sizing

--- a/templates/cohorts/cohort_filelist_all.html
+++ b/templates/cohorts/cohort_filelist_all.html
@@ -71,6 +71,16 @@
                             <th class="col-dataformat">Data Format</th>
                         </tr>
                     </thead>
+                    <colgroup>
+                        <col style="width: 8%">
+                        <col style="width: 17%">
+                        <col style="width: 8%">
+                        <col style="width: 14%">
+                        <col style="width: 12%">
+                        <col style="width: 16%">
+                        <col style="width: 17%">
+                        <col style="width: 8%">
+                    </colgroup>
                     <tbody>
                     </tbody>
                 </table>
