--- a/templates/cohorts/cohort_filelist_camic.html
+++ b/templates/cohorts/cohort_filelist_camic.html
@@ -36,16 +36,21 @@
 
                 <table class="table table-striped file-list-table" aria-label="File Listing Table">
                     <thead>
-                    <tr>
-                        <th class="col-program">Program</th>
-                        <th class="col-barcode">Sample Barcode</th>
-                        <th class="col-diseasecode">Disease Code</th>
-                        <th class="col-thumbnail">Thumbnail</th>
-                        <th class="col-datatype">Data Type</th>
-                        <th class="col-dataformat">Data Format</th>
-                        <th class="col-viewer">View</th>
-                    </tr>
+                        <tr>
+                            <th class="col-program">Program</th>
+                            <th class="col-barcode">Sample Barcode</th>
+                            <th class="col-diseasecode">Disease Code</th>
+                            <th class="col-thumbnail">Thumbnail</th>
+                            <th class="col-datatype">Data Type</th>
+                            <th class="col-dataformat">Data Format</th>
+                            <th class="col-viewer">View</th>
+                        </tr>
                     </thead>
+                    <colgroup>
+                        <col style="width: 8%">
+                        <col style="width: 17%">
+                        <col style="width: 8%">
+                    </colgroup>
                     <tbody>
                     </tbody>
                 </table>
