--- a/templates/cohorts/cohort_filelist_igv.html
+++ b/templates/cohorts/cohort_filelist_igv.html
@@ -77,6 +77,17 @@
                             <th class="col-viewer">View</th>
                         </tr>
                     </thead>
+                    <colgroup>
+                        <col style="width: 8%">
+                        <col style="width: 17%">
+                        <col style="width: 8%">
+                        <col style="width: 10%">
+                        <col style="width: 12%">
+                        <col style="width: 16%">
+                        <col style="width: 8%">
+                        <col style="width: 8%">
+                        <col style="width: 8%">
+                    </colgroup>
                     <tbody>
                     </tbody>
                 </table>
