--- a/templates/cohorts/cohort_filelist_all.html
+++ b/templates/cohorts/cohort_filelist_all.html
@@ -9,18 +9,58 @@
                 </select>
             </div>
         </div>
-        <div class="panel panel-default">
-            <div class="panel-heading" id="heading-platforms">Platforms</div>
-            <div class="panel-body" id="platforms-panel">
-                <ul class="search-checkbox-list platform-counts" id="platform-{{ build }}">
-                    {% for platform in platform_counts %}
-                        <li>
-                            <input data-platform-count="{{ platform.count }}" type="checkbox" name="platform-selected" id="{{ platform.platform }}" >
-                            <label for="{{ platform.platform }}">{{ platform.platform|get_readable_name }}</label>
-                            <span class="count">({{ platform.count }})</span>
+        <div class="panel filter-panel panel-default">
+            <div class="panel-body tab-content" id="platforms-panel">
+                <ul class="list-group" id="metadata-data-accordian-all" role="tablist" aria-multiselectable="true">
+                    {% for attr in metadata_data_attr %}
+                        <li class="list-group-item">
+                            <div id="heading-{{attr.name}}" class="list-group-item__heading">
+                                <a role="button" data-toggle="collapse" data-parent="#metadata-data-accordian-all" href="#collapse-all-{{ attr.name }}" aria-expanded="false" aria-controls="collapse-all-{{ attr.name }}">
+                                    <i class="fa fa-caret-right"></i><i class="fa fa-caret-down"></i> {{ attr.displ_name }}
+                                </a>
+                            </div>
+                            <div id="collapse-all-{{ attr.name }}" class="list-group-item__body collapse cohort-feature-select-block" role="tabpanel" data-feature-type="donor"
+                                 aria-labelledby="heading-all-{{ attr.name }}" data-feature-name="{{ attr.name }}" data-feature-displ-name="{{ attr.displ_name }}">
+                                <ul class="search-checkbox-list" id="all-{{ attr.name }}">
+                                    {% with attr.values|how_many_more:6 as num_more %}
+                                        {% for v in attr.values|check_for_order:attr.name %}
+                                            {% if forloop.counter0 < 6 %}
+                                                <li class="checkbox">
+                                                    <label title="{% if v.tooltip %}{{ v.tooltip }}{% else %} {% endif %}">
+                                                        <input type="checkbox" name="elements-selected" data-value-name="{{ v.name }}" id="all-{{ attr.name }}-{{ v.value }}"
+                                                               data-feature-name="{{ attr.name }}" data-count="{{ v.count }}">
+                                                        {% if v.value == 'None' %}NA{% elif v.displ_name %}{{ v.displ_value }}{% else %}{{ v.name }}{% endif %}
+                                                         <span class="count">({{ v.count }})</span>
+                                                    </label>
+                                                </li>
+                                            {% elif forloop.counter0 == 6 and num_more > 0 %}
+                                                <p class="more-checks"><a class="show-more">{{ num_more }} more</a><span class="checks"><a class="check-all">Check All</a> / <a class="uncheck-all">Uncheck All</a></span></p>
+                                                <li class="extra-values checkbox" style="display:none;">
+                                                    <label title="{% if v.tooltip %}{{ v.tooltip }}{% else %} {% endif %}">
+                                                        <input type="checkbox" name="elements-selected" data-value-name="{{ v.name }}" id="all-{{ attr.name}}-{{ v.value }}"
+                                                               data-feature-name="{{ attr.name }}" data-count="{{ v.count }}">
+                                                        {% if v.value == 'None' %}NA{% elif v.displ_name %}{{ v.displ_name }}{% else %}{{ v.name }}{% endif %}
+                                                         <span class="count">({{ v.count }})</span>
+                                                    </label>
+                                                </li>
+                                            {% else %}
+                                                <li class="extra-values checkbox" style="display:none;">
+                                                    <label title="{% if v.tooltip %}{{ v.tooltip }}{% else %} {% endif %}">
+                                                        <input type="checkbox" name="elements-selected" data-value-name="{{ v.name }}" id="all-{{ attr.name }}-{{ v.value }}"
+                                                               data-feature-name="{{ attr.name }}" data-count="{{ v.count }}">
+                                                        {% if v.value == 'None' %}NA{% elif v.displ_name %}{{ v.displ_name }}{% else %}{{ v.name }}{% endif %}
+                                                         <span class="count">({{ v.count }})</span>
+                                                    </label>
+                                                </li>
+                                            {% endif %}
+                                        {% endfor %}
+                                        {% if num_more > 0 %}
+                                            <p class="less-checks" style="display: none;"><a class="show-less">less</a><span class="checks"><a class="check-all">Check All</a> / <a class="uncheck-all">Uncheck All</a></span></p>
+                                        {% endif %}
+                                    {% endwith %}
+                                </ul>
+                            </div>
                         </li>
-                    {% empty %}
-                        <i>No platforms available to list.</i>
                     {% endfor %}
                 </ul>
             </div>
@@ -39,14 +79,14 @@
                     <ul>
                         <li class="menu-item">
                             <div class="filelist-obtain">
-                                <a id="download-link" href="{{ download_url }}" title="Download file manifest as CSV"><button class="btn btn-info">CSV</button></a> <a id="download-link" href="{{ download_url }}" title="Download file manifest as JSON"><button class="btn btn-info">JSON</button></a>
+                                <a id="download-link" href="{{ download_url }}" title="Download file manifest as CSV"><button class="btn btn-info">CSV</button></a>{# <a id="download-link" href="{{ download_url }}" title="Download file manifest as JSON"><button class="btn btn-info">JSON</button></a>#}
                             </div>
                         </li>
-                        <li class="menu-item">
-                            <div class="filelist-obtain">
-                                <a id="download-link" href="" title="Export file manifest to BQ"><button class="btn btn-info">BQ</button></a> <a id="download-link" href="" title="Export file manifest to GCS"><button class="btn btn-info">GCS</button></a>
-                            </div>
-                        </li>
+{#                        <li class="menu-item">#}
+{#                            <div class="filelist-obtain">#}
+{#                                <a id="download-link" href="" title="Export file manifest to BQ"><button class="btn btn-info">BQ</button></a> <a id="download-link" href="" title="Export file manifest to GCS"><button class="btn btn-info">GCS</button></a>#}
+{#                            </div>#}
+{#                        </li>#}
                     </ul>
                 </div>
             </div>
