-> Add IGV panel filters

--- a/templates/cohorts/cohort_filelist_all.html
+++ b/templates/cohorts/cohort_filelist_all.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="panel filter-panel panel-default">
-            <div class="panel-body tab-content" id="platforms-panel">
+            <div class="panel-body tab-content" id="all-filter-panel">
                 <ul class="list-group" id="metadata-data-accordian-all" role="tablist" aria-multiselectable="true">
                     {% for attr in metadata_data_attr %}
                         <li class="list-group-item">
